add Youtube Component for mdx

--- a/content/blog/ANGLab ~カワハギ攻略への道~.mdx
+++ b/content/blog/ANGLab ~カワハギ攻略への道~.mdx
@@ -27,6 +27,8 @@ tag:
 釣り方の参考として一番わかりやすいと思ったのは DAIWA さんの動画です。釣り前から釣れた後まで丁寧に解説されていると思います。初心者は釣りをする前に色々なことを言われても分からなくなると思うので、要点を絞って自分の頭の中をシンプルにして挑みたい人はこの動画 1 本で十分だと思います。
 
 > [【DAIWA 初心者釣り入門】やってみよう！ 東京湾のカワハギ釣り編 - YouTube](https://www.youtube.com/watch?v=L9SshqKH_Cc)
+>
+> <Youtube embededSrc="https://www.youtube.com/embed/L9SshqKH_Cc" />
 
 ## 準備ポイント
 
